gen/com/plopiplop/leekwars/parser/LeekScriptParser.java
// This is a generated file. Not intended for manual editing.
package com.plopiplop.leekwars.parser;

import com.intellij.lang.ASTNode;
import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import com.intellij.lang.PsiParser;
import com.intellij.openapi.diagnostic.Logger;
import com.intellij.psi.tree.IElementType;

import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import static com.plopiplop.leekwars.psi.LSTypes.*;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class LeekScriptParser implements PsiParser {

  public static final Logger LOG_ = Logger.getInstance("com.plopiplop.leekwars.parser.LeekScriptParser");

  public ASTNode parse(IElementType root_, PsiBuilder builder_) {
    boolean result_;
    builder_ = adapt_builder_(root_, builder_, this, null);
    Marker marker_ = enter_section_(builder_, 0, _COLLAPSE_, null);
      if (root_ == ADDITIVE_EXPRESSION) {
          result_ = additiveExpression(builder_, 0);
      } else if (root_ == ARGUMENT_LIST) {
      result_ = argumentList(builder_, 0);
    }
    else if (root_ == ARGUMENTS) {
      result_ = arguments(builder_, 0);
    }
    else if (root_ == ARRAY_LITERAL) {
      result_ = arrayLiteral(builder_, 0);
      } else if (root_ == ASSIGN_EXPRESSION) {
          result_ = assignExpression(builder_, 0);
      } else if (root_ == BITWISE_EXPRESSION) {
          result_ = bitwiseExpression(builder_, 0);
      }
    else if (root_ == BLOCK) {
      result_ = block(builder_, 0);
    }
    else if (root_ == BREAK_STATEMENT) {
      result_ = breakStatement(builder_, 0);
      } else if (root_ == COMPARE_EXPRESSION) {
          result_ = compareExpression(builder_, 0);
      }
    else if (root_ == CONTINUE_STATEMENT) {
      result_ = continueStatement(builder_, 0);
    }
    else if (root_ == DO_WHILE_STATEMENT) {
      result_ = doWhileStatement(builder_, 0);
    }
    else if (root_ == ELEMENT_LIST) {
      result_ = elementList(builder_, 0);
    }
    else if (root_ == ELSE_BLOCK) {
      result_ = elseBlock(builder_, 0);
    }
    else if (root_ == EMPTY_STATEMENT) {
      result_ = emptyStatement(builder_, 0);
    }
    else if (root_ == EOS) {
      result_ = eos(builder_, 0);
    }
    else if (root_ == EXPRESSION_STATEMENT) {
      result_ = expressionStatement(builder_, 0);
    }
    else if (root_ == FOR_INITIALIZER) {
      result_ = forInitializer(builder_, 0);
    }
    else if (root_ == FOR_STATEMENT) {
      result_ = forStatement(builder_, 0);
    }
    else if (root_ == FORMAL_PARAMETER_LIST) {
      result_ = formalParameterList(builder_, 0);
    }
    else if (root_ == FUNCTION_DECLARATION) {
      result_ = functionDeclaration(builder_, 0);
      } else if (root_ == FUNCTION_EXPRESSION) {
          result_ = functionExpression(builder_, 0);
      } else if (root_ == FUNCTION_NAME) {
          result_ = functionName(builder_, 0);
      }
    else if (root_ == IF_STATEMENT) {
      result_ = ifStatement(builder_, 0);
    }
    else if (root_ == INCLUDE) {
      result_ = include(builder_, 0);
    }
    else if (root_ == INITIALISER) {
      result_ = initialiser(builder_, 0);
      } else if (root_ == KEYVAL) {
          result_ = keyval(builder_, 0);
      } else if (root_ == KEYVAL_LIST) {
          result_ = keyvalList(builder_, 0);
      }
    else if (root_ == LITERAL) {
      result_ = literal(builder_, 0);
      } else if (root_ == LOGIC_AND_EXPRESSION) {
          result_ = logicAndExpression(builder_, 0);
      } else if (root_ == LOGIC_OR_EXPRESSION) {
          result_ = logicOrExpression(builder_, 0);
      } else if (root_ == MEMBER_EXPRESSION) {
          result_ = memberExpression(builder_, 0);
      }
    else if (root_ == METHOD_CALL) {
      result_ = methodCall(builder_, 0);
    }
    else if (root_ == MODIFIER) {
      result_ = modifier(builder_, 0);
      } else if (root_ == MULTIPLICATIVE_EXPRESSION) {
          result_ = multiplicativeExpression(builder_, 0);
      }
    else if (root_ == PARAMETER) {
      result_ = parameter(builder_, 0);
    } else if (root_ == PREFIX_EXPRESSION) {
          result_ = prefixExpression(builder_, 0);
      }
    else if (root_ == PREFIX_OPERATOR) {
      result_ = prefixOperator(builder_, 0);
      } else if (root_ == PRIMARY_EXPRESSION) {
          result_ = primaryExpression(builder_, 0);
      } else if (root_ == REFERENCE_EXPRESSION) {
          result_ = referenceExpression(builder_, 0);
      }
    else if (root_ == REFERENCE_STRING) {
      result_ = referenceString(builder_, 0);
    }
    else if (root_ == RETURN_STATEMENT) {
      result_ = returnStatement(builder_, 0);
    } else if (root_ == SHIFT_EXPRESSION) {
          result_ = shiftExpression(builder_, 0);
      }
    else if (root_ == SINGLE_EXPRESSION) {
      result_ = singleExpression(builder_, 0);
    }
    else if (root_ == STATEMENT_LIST) {
      result_ = statementList(builder_, 0);
      } else if (root_ == SUFFIX_EXPRESSION) {
          result_ = suffixExpression(builder_, 0);
      } else if (root_ == TERNARY_EXPRESSION) {
          result_ = ternaryExpression(builder_, 0);
      }
    else if (root_ == THEN_BLOCK) {
      result_ = thenBlock(builder_, 0);
    }
    else if (root_ == VARIABLE_DECLARATION) {
      result_ = variableDeclaration(builder_, 0);
    }
    else if (root_ == VARIABLE_STATEMENT) {
      result_ = variableStatement(builder_, 0);
    }
    else if (root_ == WHILE_CONDITION) {
      result_ = whileCondition(builder_, 0);
    }
    else if (root_ == WHILE_STATEMENT) {
      result_ = whileStatement(builder_, 0);
    }
    else {
      result_ = parse_root_(root_, builder_, 0);
    }
    exit_section_(builder_, 0, marker_, root_, result_, true, TRUE_CONDITION);
    return builder_.getTreeBuilt();
  }

  protected boolean parse_root_(final IElementType root_, final PsiBuilder builder_, final int level_) {
    return program(builder_, level_ + 1);
  }

  /* ********************************************************** */
  // additiveOperator multiplicativeExpressionWrapper
  public static boolean additiveExpression(PsiBuilder builder_, int level_) {
      if (!recursion_guard_(builder_, level_, "additiveExpression")) return false;
      if (!nextTokenIs(builder_, "<additive expression>", OP_PLUS, OP_MINUS)) return false;
      boolean result_;
      Marker marker_ = enter_section_(builder_, level_, _LEFT_, "<additive expression>");
      result_ = additiveOperator(builder_, level_ + 1);
      result_ = result_ && multiplicativeExpressionWrapper(builder_, level_ + 1);
      exit_section_(builder_, level_, marker_, ADDITIVE_EXPRESSION, result_, false, null);
      return result_;
  }

    /* ********************************************************** */
    // multiplicativeExpressionWrapper additiveExpression*
    static boolean additiveExpressionWrapper(PsiBuilder builder_, int level_) {
        if (!recursion_guard_(builder_, level_, "additiveExpressionWrapper")) return false;
        boolean result_;
        Marker marker_ = enter_section_(builder_);
        result_ = multiplicativeExpressionWrapper(builder_, level_ + 1);
        result_ = result_ && additiveExpressionWrapper_1(builder_, level_ + 1);
        exit_section_(builder_, marker_, null, result_);
        return result_;
    }

    // additiveExpression*
    private static boolean additiveExpressionWrapper_1(PsiBuilder builder_, int level_) {
        if (!recursion_guard_(builder_, level_, "additiveExpressionWrapper_1")) return false;
        int pos_ = current_position_(builder_);
        while (true) {
            if (!additiveExpression(builder_, level_ + 1)) break;
            if (!empty_element_parsed_guard_(builder_, "additiveExpressionWrapper_1", pos_)) break;
            pos_ = current_position_(builder_);
    }
        return true;
    }

    /* ********************************************************** */
    // '+' | '-'
    static boolean additiveOperator(PsiBuilder builder_, int level_) {
        if (!recursion_guard_(builder_, level_, "additiveOperator")) return false;
        if (!nextTokenIs(builder_, "", OP_PLUS, OP_MINUS)) return false;
        boolean result_;
        Marker marker_ = enter_section_(builder_);
        result_ = consumeToken(builder_, OP_PLUS);
        if (!result_) result_ = consumeToken(builder_, OP_MINUS);
        exit_section_(builder_, marker_, null, result_);
        return result_;
    }

    /* ********************************************************** */
  // singleExpressionPart (',' singleExpressionPart)*
  public static boolean argumentList(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "argumentList")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<argument list>");
    result_ = singleExpressionPart(builder_, level_ + 1);
    result_ = result_ && argumentList_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, ARGUMENT_LIST, result_, false, singleExpressionRecover_parser_);
    return result_;
  }

  // (',' singleExpressionPart)*
  private static boolean argumentList_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "argumentList_1")) return false;
    int pos_ = current_position_(builder_);
    while (true) {
      if (!argumentList_1_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "argumentList_1", pos_)) break;
      pos_ = current_position_(builder_);
    }
    return true;
  }

  // ',' singleExpressionPart
  private static boolean argumentList_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "argumentList_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, OP_COMMA);
    result_ = result_ && singleExpressionPart(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // '(' argumentList? ')'
  public static boolean arguments(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "arguments")) return false;
    if (!nextTokenIs(builder_, OP_LPAREN)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, OP_LPAREN);
    result_ = result_ && arguments_1(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, OP_RPAREN);
    exit_section_(builder_, marker_, ARGUMENTS, result_);
    return result_;
  }

  // argumentList?
  private static boolean arguments_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "arguments_1")) return false;
    argumentList(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // '[' (keyvalList | elementList)? ']'
  public static boolean arrayLiteral(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "arrayLiteral")) return false;
    if (!nextTokenIs(builder_, OP_LBRACKET)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, OP_LBRACKET);
    result_ = result_ && arrayLiteral_1(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, OP_RBRACKET);
    exit_section_(builder_, marker_, ARRAY_LITERAL, result_);
    return result_;
  }

    // (keyvalList | elementList)?
  private static boolean arrayLiteral_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "arrayLiteral_1")) return false;
      arrayLiteral_1_0(builder_, level_ + 1);
    return true;
  }

    // keyvalList | elementList
    private static boolean arrayLiteral_1_0(PsiBuilder builder_, int level_) {
        if (!recursion_guard_(builder_, level_, "arrayLiteral_1_0")) return false;
        boolean result_;
        Marker marker_ = enter_section_(builder_);
        result_ = keyvalList(builder_, level_ + 1);
        if (!result_) result_ = elementList(builder_, level_ + 1);
        exit_section_(builder_, marker_, null, result_);
        return result_;
    }

    /* ********************************************************** */
    // assignmentOperator ternaryExpressionWrapper
    public static boolean assignExpression(PsiBuilder builder_, int level_) {
        if (!recursion_guard_(builder_, level_, "assignExpression")) return false;
        boolean result_;
        boolean pinned_;
        Marker marker_ = enter_section_(builder_, level_, _LEFT_, "<assign expression>");
        result_ = assignmentOperator(builder_, level_ + 1);
        pinned_ = result_; // pin = 1
        result_ = result_ && ternaryExpressionWrapper(builder_, level_ + 1);
        exit_section_(builder_, level_, marker_, ASSIGN_EXPRESSION, result_, pinned_, null);
        return result_ || pinned_;
    }

    /* ********************************************************** */
    // ternaryExpressionWrapper assignExpression*
    static boolean assignExpressionWrapper(PsiBuilder builder_, int level_) {
        if (!recursion_guard_(builder_, level_, "assignExpressionWrapper")) return false;
        boolean result_;
        Marker marker_ = enter_section_(builder_);
        result_ = ternaryExpressionWrapper(builder_, level_ + 1);
        result_ = result_ && assignExpressionWrapper_1(builder_, level_ + 1);
        exit_section_(builder_, marker_, null, result_);
        return result_;
    }

    // assignExpression*
    private static boolean assignExpressionWrapper_1(PsiBuilder builder_, int level_) {
        if (!recursion_guard_(builder_, level_, "assignExpressionWrapper_1")) return false;
        int pos_ = current_position_(builder_);
        while (true) {
            if (!assignExpression(builder_, level_ + 1)) break;
            if (!empty_element_parsed_guard_(builder_, "assignExpressionWrapper_1", pos_)) break;
            pos_ = current_position_(builder_);
    }
        return true;
    }

  /* ********************************************************** */
  // '=' | '+=' | '-=' | '*=' | '/=' | '&=' | '|=' | '^='
  static boolean assignmentOperator(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "assignmentOperator")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, OP_ASSIGN);
    if (!result_) result_ = consumeToken(builder_, OP_PLUS_EQ);
    if (!result_) result_ = consumeToken(builder_, OP_MINUS_EQ);
    if (!result_) result_ = consumeToken(builder_, OP_TIMES_EQ);
    if (!result_) result_ = consumeToken(builder_, OP_DIVIDE_EQ);
    if (!result_) result_ = consumeToken(builder_, OP_AND_EQ);
    if (!result_) result_ = consumeToken(builder_, OP_OR_EQ);
      if (!result_) result_ = consumeToken(builder_, OP_XOR_EQ);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // bitwiseOperator shiftExpressionWrapper
  public static boolean bitwiseExpression(PsiBuilder builder_, int level_) {
      if (!recursion_guard_(builder_, level_, "bitwiseExpression")) return false;
      boolean result_;
      Marker marker_ = enter_section_(builder_, level_, _LEFT_, "<bitwise expression>");
      result_ = bitwiseOperator(builder_, level_ + 1);
      result_ = result_ && shiftExpressionWrapper(builder_, level_ + 1);
      exit_section_(builder_, level_, marker_, BITWISE_EXPRESSION, result_, false, null);
      return result_;
  }

    /* ********************************************************** */
    // shiftExpressionWrapper bitwiseExpression*
    static boolean bitwiseExpressionWrapper(PsiBuilder builder_, int level_) {
        if (!recursion_guard_(builder_, level_, "bitwiseExpressionWrapper")) return false;
        boolean result_;
        Marker marker_ = enter_section_(builder_);
        result_ = shiftExpressionWrapper(builder_, level_ + 1);
        result_ = result_ && bitwiseExpressionWrapper_1(builder_, level_ + 1);
        exit_section_(builder_, marker_, null, result_);
        return result_;
    }

    // bitwiseExpression*
    private static boolean bitwiseExpressionWrapper_1(PsiBuilder builder_, int level_) {
        if (!recursion_guard_(builder_, level_, "bitwiseExpressionWrapper_1")) return false;
        int pos_ = current_position_(builder_);
        while (true) {
            if (!bitwiseExpression(builder_, level_ + 1)) break;
            if (!empty_element_parsed_guard_(builder_, "bitwiseExpressionWrapper_1", pos_)) break;
            pos_ = current_position_(builder_);
    }
        return true;
    }

    /* ********************************************************** */
    // '&' | '^' | '|'
    static boolean bitwiseOperator(PsiBuilder builder_, int level_) {
        if (!recursion_guard_(builder_, level_, "bitwiseOperator")) return false;
        boolean result_;
        Marker marker_ = enter_section_(builder_);
        result_ = consumeToken(builder_, OP_BINARY_AND);
        if (!result_) result_ = consumeToken(builder_, OP_XOR);
        if (!result_) result_ = consumeToken(builder_, OP_BINARY_OR);
        exit_section_(builder_, marker_, null, result_);
        return result_;
    }

    /* ********************************************************** */
  // '{' statementList? '}'
  public static boolean block(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "block")) return false;
    if (!nextTokenIs(builder_, OP_LBRACE)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, OP_LBRACE);
    result_ = result_ && block_1(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, OP_RBRACE);
    exit_section_(builder_, marker_, BLOCK, result_);
    return result_;
  }

  // statementList?
  private static boolean block_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "block_1")) return false;
    statementList(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // 'break' eos
  public static boolean breakStatement(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "breakStatement")) return false;
    if (!nextTokenIs(builder_, KW_BREAK)) return false;
    boolean result_;
    boolean pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, null);
    result_ = consumeToken(builder_, KW_BREAK);
    pinned_ = result_; // pin = 1
    result_ = result_ && eos(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, BREAK_STATEMENT, result_, pinned_, null);
    return result_ || pinned_;
  }

  /* ********************************************************** */
  // (comparisonOperator | equalityOperator) bitwiseExpressionWrapper
  public static boolean compareExpression(PsiBuilder builder_, int level_) {
      if (!recursion_guard_(builder_, level_, "compareExpression")) return false;
    boolean result_;
      Marker marker_ = enter_section_(builder_, level_, _LEFT_, "<compare expression>");
      result_ = compareExpression_0(builder_, level_ + 1);
      result_ = result_ && bitwiseExpressionWrapper(builder_, level_ + 1);
      exit_section_(builder_, level_, marker_, COMPARE_EXPRESSION, result_, false, null);
      return result_;
  }

    // comparisonOperator | equalityOperator
    private static boolean compareExpression_0(PsiBuilder builder_, int level_) {
        if (!recursion_guard_(builder_, level_, "compareExpression_0")) return false;
        boolean result_;
    Marker marker_ = enter_section_(builder_);
        result_ = comparisonOperator(builder_, level_ + 1);
        if (!result_) result_ = equalityOperator(builder_, level_ + 1);
        exit_section_(builder_, marker_, null, result_);
        return result_;
    }

    /* ********************************************************** */
    // bitwiseExpressionWrapper compareExpression*
    static boolean compareExpressionWrapper(PsiBuilder builder_, int level_) {
        if (!recursion_guard_(builder_, level_, "compareExpressionWrapper")) return false;
        boolean result_;
        Marker marker_ = enter_section_(builder_);
        result_ = bitwiseExpressionWrapper(builder_, level_ + 1);
        result_ = result_ && compareExpressionWrapper_1(builder_, level_ + 1);
        exit_section_(builder_, marker_, null, result_);
        return result_;
    }

    // compareExpression*
    private static boolean compareExpressionWrapper_1(PsiBuilder builder_, int level_) {
        if (!recursion_guard_(builder_, level_, "compareExpressionWrapper_1")) return false;
        int pos_ = current_position_(builder_);
        while (true) {
            if (!compareExpression(builder_, level_ + 1)) break;
            if (!empty_element_parsed_guard_(builder_, "compareExpressionWrapper_1", pos_)) break;
            pos_ = current_position_(builder_);
    }
        return true;
    }

    /* ********************************************************** */
    // '<=' | '>=' | '<' | '>'
    static boolean comparisonOperator(PsiBuilder builder_, int level_) {
        if (!recursion_guard_(builder_, level_, "comparisonOperator")) return false;
        boolean result_;
        Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, OP_LE);
    if (!result_) result_ = consumeToken(builder_, OP_GE);
    if (!result_) result_ = consumeToken(builder_, OP_LT);
    if (!result_) result_ = consumeToken(builder_, OP_GT);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // 'continue' eos
  public static boolean continueStatement(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "continueStatement")) return false;
    if (!nextTokenIs(builder_, KW_CONTINUE)) return false;
    boolean result_;
    boolean pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, null);
    result_ = consumeToken(builder_, KW_CONTINUE);
    pinned_ = result_; // pin = 1
    result_ = result_ && eos(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, CONTINUE_STATEMENT, result_, pinned_, null);
    return result_ || pinned_;
  }

  /* ********************************************************** */
  // 'do' (block | statement) whileCondition eos
  public static boolean doWhileStatement(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "doWhileStatement")) return false;
    if (!nextTokenIs(builder_, KW_DO)) return false;
    boolean result_;
    boolean pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, null);
    result_ = consumeToken(builder_, KW_DO);
    pinned_ = result_; // pin = 1
      result_ = result_ && report_error_(builder_, doWhileStatement_1(builder_, level_ + 1));
    result_ = pinned_ && report_error_(builder_, whileCondition(builder_, level_ + 1)) && result_;
    result_ = pinned_ && eos(builder_, level_ + 1) && result_;
    exit_section_(builder_, level_, marker_, DO_WHILE_STATEMENT, result_, pinned_, null);
    return result_ || pinned_;
  }

    // block | statement
    private static boolean doWhileStatement_1(PsiBuilder builder_, int level_) {
        if (!recursion_guard_(builder_, level_, "doWhileStatement_1")) return false;
        boolean result_;
        Marker marker_ = enter_section_(builder_);
        result_ = block(builder_, level_ + 1);
        if (!result_) result_ = statement(builder_, level_ + 1);
        exit_section_(builder_, marker_, null, result_);
        return result_;
    }

  /* ********************************************************** */
  // singleExpression (',' singleExpression)*
  public static boolean elementList(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "elementList")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<element list>");
    result_ = singleExpression(builder_, level_ + 1);
    result_ = result_ && elementList_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, ELEMENT_LIST, result_, false, null);
    return result_;
  }

  // (',' singleExpression)*
  private static boolean elementList_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "elementList_1")) return false;
    int pos_ = current_position_(builder_);
    while (true) {
      if (!elementList_1_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "elementList_1", pos_)) break;
      pos_ = current_position_(builder_);
    }
    return true;
  }

  // ',' singleExpression
  private static boolean elementList_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "elementList_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, OP_COMMA);
    result_ = result_ && singleExpression(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // 'else' (block | statement)
  public static boolean elseBlock(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "elseBlock")) return false;
    if (!nextTokenIs(builder_, KW_ELSE)) return false;
    boolean result_;
      boolean pinned_;
      Marker marker_ = enter_section_(builder_, level_, _NONE_, null);
    result_ = consumeToken(builder_, KW_ELSE);
      pinned_ = result_; // pin = 1
      result_ = result_ && elseBlock_1(builder_, level_ + 1);
      exit_section_(builder_, level_, marker_, ELSE_BLOCK, result_, pinned_, null);
      return result_ || pinned_;
  }

    // block | statement
    private static boolean elseBlock_1(PsiBuilder builder_, int level_) {
        if (!recursion_guard_(builder_, level_, "elseBlock_1")) return false;
        boolean result_;
        Marker marker_ = enter_section_(builder_);
        result_ = block(builder_, level_ + 1);
        if (!result_) result_ = statement(builder_, level_ + 1);
        exit_section_(builder_, marker_, null, result_);
        return result_;
    }
